# do-not-attend

./:  data_stats.md  EXAMPLES.md  README.md  analysis.py  buffer.ipynb  buffer.md  buffer.py  compare_hf_to_TransformerLens.py  compare_streaming.py  config.py  data.py  embeddings.py  filename.py  get_model.py  interactive.py  keys.py  main.py  model.py  pyproject.toml  qkv_vectors.py  refs.bib  requirements.txt  run_experiments.py  sample.txt  test_analysis.py  testing.py  the_multi.json  tokenization.py  utils.py  visualizations.py
figures/16000_tokens/: all_filter_stats.txt
figures/16000_tokens/FreeLaw/all/: filter_stats.txt
figures/16000_tokens/NIH_ExPorter/all/: filter_stats.txt
figures/16000_tokens/PhilPapers/all/: filter_stats.txt
figures/16000_tokens/PubMed_Abstracts/: filter_stats.txt
figures/16000_tokens/USPTO_Backgrounds/all/: filter_stats.txt
figures/16000_tokens/Wikipedia_en/all/: filter_stats.txt
figures/16000_tokens_old/FreeLaw/: Untitled
local_data/: sample_pipeline_output.json  sample_summary.json
logs/: do-not-attend_3378253.err  do-not-attend_3378253.out  do-not-attend_8331844.err  do-not-attend_8331844.out  do-not-attend_8335362.err  do-not-attend_8335362.out  do-not-attend_8457788.err  do-not-attend_8457788.out  do-not-attend_8461600.err  do-not-attend_8461600.out
output/: multi_word_output.json
scripts/: env_check.py  get_data.py  run_job.sh  run_job_discovery.sh  run_job_endeavour.sh  run_kv_cache.sh  run_qkv_cache.sh
testing (temp)/: compare_streaming.py  verify_averages.py
