[project]
name = "do-not-attend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.5.0",
    "importlib>=1.0.4",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "jedi>=0.19.2",
    "matplotlib-backend-kitty>=2.1.2",
    "plotly>=6.5.2",
    "seaborn>=0.13.2",
    "transformers>=5.2.0",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
]
